# cyc-firstpass

./: .gitignore  AGENTS.md  README.md  cyc_first.err  cyc_first_infer.err  cyc_first_infer.out  cyc_first_train.out  infer.sh  make_manifest.sh  multi-gpu-multi-node_training.md  pixel_km_conversion.md  push.sh  pyproject.toml  requirements.txt  sbatch_infer.sh  sbatch_train.sh  sbatch_train_temporal.sh  train.sh  train_temporal.sh  vision_cyc_firstpass.md
config/: default.yml
mini_data_input/: analysis_time_windows.ipynb
notebooks/: View_dataset.ipynb  compute_dataset_normalization.ipynb  training_log_analysis.ipynb
outputs/preds/: metrics.json
outputs/preds/curves/: pr_curve_combined.csv  pr_curve_logit.csv  roc_curve_combined.csv  roc_curve_logit.csv
outputs/runs/exp_7_notempstride_hmupsample/: training_log.csv
outputs/runs/exp_mpi_1/: training_log.csv
outputs/runs/exp_mpi_10/: training_log.csv
outputs/runs/exp_mpi_11/: training_log.csv
outputs/runs/exp_mpi_12/: training_log.csv
outputs/runs/exp_mpi_13/: preds_test.csv  training_log.csv
outputs/runs/exp_mpi_2/: training_log.csv
outputs/runs/exp_mpi_3/: training_log.csv
scripts/: debug_peak_stats.py  generate_manifest.py  letterbox_folder.py  make_letterboxed_copies.py  make_manifest_from_windows.py
src/cyclone_locator/: geo_utils.py  infer.py  metrics.py  train.py
src/medicane_utils/: __init__.py  engine_for_tracking.py  geo_const.py  inference_tracking.py
tests/: test_letterbox.py  test_manifest_cli.py  test_windows.py
tools/: render_letterbox_video.py  view_test_tiles.py
(+43 files in other folders)
